--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Hola! welcome to the Web. #{title}
+  p Hola! welcome to the #{title} JS.
+  button(type="button", class="btn btn-success") Press Me 
