--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,16 @@ extends layout
 block content
   h1= title
   p Hola! welcome to the #{title} JS.
-  button(type="button", class="btn btn-success") Press Me 
+  
+  button(type="button", class="btn btn-success", onclick="update()") Press Me 
+  
+  p 
+  div(id="target") Display
+  
+  script.
+    var client_count=0;
+    function update(){
+      client_count+=1;
+      
+      document.getElementById("target").innerHTML="Value Now "+client_count  ;
+    }
