--- a/views/index.pug
+++ b/views/index.pug
@@ -16,3 +16,5 @@ block content
       
       document.getElementById("target").innerHTML="Value Now "+client_count  ;
     }
+
+  a(href="icecream") Go to IceCream Page
