commits till part 8 edited

--- a/views/slot.pug
+++ b/views/slot.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= Slot Machine
+  h1=title 
   
 - var image_names = ["iPhone.jpg", "ipad.jpg", "macbook.jpg", "appleWatch.jpg", "airpodsPro.jpg"]
 - for(let i=0; i<3; i++){
