--- a/views/slot.pug
+++ b/views/slot.pug
@@ -1,9 +1,10 @@
 extends layout
 
 block content
-  h1=title 
-  
-- var image_names = ["iPhone.jpg", "ipad.jpg", "macbook.jpg", "appleWatch.jpg", "airpodsPro.jpg"]
-- for(let i=0; i<3; i++){
-    img(src=`/images/${image_names[Math.floor(Math.random()*5)]}` alt=`Image No ${Math.floor(Math.random()*5)}` height="300px" width="300px")
-}
+  h1= title
+  - var image_names=["airpodspro.jpg","applewatch.jpg","ipad.jpg","iphone.jpg","macbook.jpg"]
+  - for(let i=0;i<3;i++){
+     - let random= Math.floor(Math.random()*5)
+     img(src=`/images/${image_names[random]}` alt=`Image No ${random}` height="300px" width="300px")
+
+  - }
